# Open-ClaudeScience-quant-

./: .gitignore  CHANGELOG.md  GAP_ANALYSIS.md  LAUNCH_READINESS.md  LICENSE  PHASE0.md  PHASE1.md  PHASE10.md  PHASE13.md  PHASE13B.md  PHASE13B_HITL_STAGING.md  PHASE3.md  PHASE4.md  PHASE5.md  PHASE6.md  PHASE7.md  PHASE8.md  PHASE9.md  PHASE_UI.md  PROJECT_STATUS.md  README.md  V0_RELEASE_PLAN.md  VISION.md  pyproject.toml
.claude/: launch.json
.github/workflows/: tests.yml
docs/: RELEASE.md
docs/dev/: GAP_ANALYSIS.md  MEMORY_ARCHITECTURE.md  MEMORY_BUILD_PLAN.md  PHASE10_STATS_FOLLOWUP.md  PHASE11.md  PHASE12.md  PHASE13B_MCP_CLIENT.md  PLAN-mcp-skills-parity.md  PROJECT_STATUS.md
quantbench/: __init__.py  cli.py  config.py  config_management.py  costing.py  devserver.py  examples.py  platform.py
quantbench/agent/: __init__.py  coordinator.py  execution_backend.py  llm.py  loop.py  prompts.py  run_context.py  staging.py  subagent.py
quantbench/api/: __init__.py  config_routes.py  llm_key.py  run_manager.py  run_reader.py  schemas.py  security.py  server.py  session.py
quantbench/artifact/: __init__.py  store.py
quantbench/data/: __init__.py  cache.py  exchange.py  perpetual_schema.py  retention.py  universe.py  warehouse.py
quantbench/engine/: costs.py  cross_sectional_backtest.py  execution.py  metrics.py  neutralize.py  vectorized_backtest.py
quantbench/evals/: __init__.py  llm_cases.yaml  llm_eval.py
quantbench/factors/: __init__.py  entry.py  lifecycle.py  paper_tracking.py  parametrize.py  signal_export.py  store.py
quantbench/literature/: __init__.py  agent.py  ingest.py  paper.py  (+2 more)
skills_docs/: causal-factor-authoring.md  crypto-cross-sectional-workflow.md  reviewer-weak-triage.md
tests/: _fakes.py  _pdf_fixture.py  golden_run_registry.py  test_api.py  test_cli_e2e.py  test_config_management.py  test_crypto_universe_pit.py  test_crypto_universe_snapshot.py  test_data_providers.py  test_engine_funding.py  test_factor_lifecycle.py  test_golden_run_discipline.py  test_launch_code_readiness.py  test_launch_product_readiness.py  test_launch_quant_readiness.py  test_literature_agent.py  test_literature_ingest.py  test_literature_reproduce.py  test_llm_usage_tracking.py  test_memory_stage_a_session.py  test_memory_stage_b_user_memory.py  test_memory_stage_c_consolidation.py  test_paper_tracking.py  test_phase0_core.py  test_phase105_statistics.py  test_phase10_golden_runs.py  test_phase10_statistics.py  test_phase11_pit_integration.py  test_phase11_pit_membership.py  test_phase11_remaining_data_foundation.py  test_phase12_borrow.py  test_phase12_costs.py  test_phase12_execution.py  test_phase12_neutralize.py  test_phase12_reviewer.py  test_phase13_sandbox.py  test_phase13b_execution_backend.py  test_phase13b_mcp.py  test_phase13b_staging.py  test_phase1_cross_sectional.py  (+12 more)
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+90 files in other folders)
