[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantbench"
version = "0.1.0"
description = "Phase 0 CLI prototype for reproducible quantitative research runs."
requires-python = ">=3.10"
dependencies = [
  "ccxt",
  "click",
  "duckdb",
  "fastapi",
  "litellm",
  "lxml",
  "matplotlib",
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "requests",
  "scipy",
  "uvicorn",
  "yfinance",
]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["quantbench"]
