[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantbench"
version = "0.1.0"
description = "Phase 0 CLI prototype for reproducible quantitative research runs."
requires-python = ">=3.10"
dependencies = [
  "ccxt",
  "click",
  "duckdb",
  "fastapi",
  "litellm",
  "lxml",
  "matplotlib",
  "mcp>=1.0",
  "numpy",
  "pandas",
  "pyarrow",
  "pypdf>=6.14.2",
  "pyyaml",
  "requests",
  "scipy",
  "uvicorn",
  "yfinance",
]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["quantbench"]

[tool.hatch.build.targets.wheel.force-include]
"quantbench/data/seeds/crypto_universe_snapshots.json" = "quantbench/data/seeds/crypto_universe_snapshots.json"
"quantbench/evals/llm_cases.yaml" = "quantbench/evals/llm_cases.yaml"
