[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantbench"
version = "0.1.0"
description = "Local AI workbench for reproducible quantitative research runs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "ccxt",
  "click",
  "duckdb",
  "fastapi",
  "litellm",
  "lxml",
  "matplotlib",
  "mcp>=1.0",
  "numpy",
  "pandas",
  "pyarrow",
  "pypdf>=6.14.2",
  "pyyaml",
  "requests",
  "scipy",
  "uvicorn",
  "yfinance",
]

[dependency-groups]
dev = ["build", "pytest"]

[project.scripts]
quantbench = "quantbench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["quantbench"]

[tool.hatch.build.targets.wheel.force-include]
"quantbench/data/seeds/crypto_universe_snapshots.json" = "quantbench/data/seeds/crypto_universe_snapshots.json"
"quantbench/evals/llm_cases.yaml" = "quantbench/evals/llm_cases.yaml"
